test/regress/coverage-post-account-badarg.test
; Coverage test for post.cc
; Tests get_account error when argument is neither string, mask, nor long.
; account(30) passes 30 as an amount (not a long), which is rejected.

2024/03/01 Test
    Expenses:Food     $10.00
    Assets:Cash

test reg --format "%(account(30))\n" -> 1
__ERROR__
While evaluating value expression:
  account(30)
  ^^^^^^^^^^^
While calling function 'account 30':
While handling posting from "$FILE", line 6:
>     Expenses:Food     $10.00
Error: Expected string or mask for argument 1, but received an amount
end test
